cloudnative/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-http-service
            port: 
              number: 80
